# t-triste

./: Cargo.toml  README.md
readmes/: stream_1.md  stream_10.md  stream_11.md  stream_12.md  stream_13.md  stream_14.md  stream_2.md  stream_3.md  stream_4.md  stream_5.md  stream_6.md  stream_7.md  stream_8.md  stream_9.md
src/: board.rs  cursor.rs  lib.rs  main.rs  piece.rs  piece_builder.rs  position.rs  rectangle.rs  shape.rs
src/piece/: board.rs  corner.rs  l.rs  mod.rs  piece.rs  rectangle.rs  square.rs  z.rs
t-triste/: Cargo.toml
t-triste-lib/: Cargo.toml
t-triste-lib/src/: cursor.rs  lib.rs
t-triste-lib/src/piece/: board.rs  corner.rs  l.rs  mod.rs  piece.rs  piece_builder.rs  rectangle.rs  square.rs  z.rs
t-triste-macro/: Cargo.toml
t-triste-macro/src/: lib.rs
t-triste/src/: main.rs
