[package]
name = "t-triste"
version = "0.1.0"
authors = [
    "ImFlog <garcia.florian.perso@gmail.com>",
    "NugetChar <nugetchar@gmail.com>"
]
edition = "2018"

[dependencies]

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "bc4fe9b186db3f32eef38fc4241289df480fa949"
features = ["render"]
